# smart_esprit

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in  smart_esprit.glade  smart_esprit.gladep.bak
autom4te.cache/: output.1  requests  traces.0  traces.1
pixmaps/: food
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  dashboard.txt  etudiant.c  etudiant.h  etudiant.txt  fichier.h  fonction.c  fonctionr.c  fonctionr.h  interface.c.bak  interface.h.bak  main.c  nb_etudiant.txt  produit1.txt  reclamation.h  reclamation.txt  smart_esprit  user.c  user.h  user.txt  yes.c  yes.h  yes.txt
